# enigma2-po

./: .gitignore  .gitmodules  LICENSE  Makefile  Makefile.translations  README.md  configure.ac
.github/workflows/: import.yml
po/: .gitignore  Makefile.am  am.po  ar.po  ca.po  ckb.po  cs.po  da.po  de.po  el.po  en.po  enigma2.pot  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  tr.po  uk.po  zh_Hans.po
scripts/: fix_msgid.py  xml2po.py
